<resources>
    <string name="app_name">Retailer POS - POS for Magento</string>
    <string name="login_title">Magestore POS</string>
    <string name="login_domain">Domain</string>
    <string name="login_user_name">User name</string>
    <string name="login_password">Password</string>
    <string name="login_action_sign_in">Sign in</string>
    <string name="login_action_sign_in_short">Sign in</string>
    <string name="login_error_invalid_user_name">This user name is invalid</string>
    <string name="login_error_invalid_password">This password is too short</string>
    <string name="login_error_incorrect_password">This user name or password is incorrect</string>
    <string name="login_error_no_pos">No POS available! You have to have an POS before start checkout</string>
    <string name="product_available_qty">%1$s item(s)</string>
    <string name="sales_search_product_here">Search name, SKU, category</string>
    <string name="sales_title_sales_list">Items</string>
    <string name="sales_title_sales_detail">Sales Detail</string>
    <string name="sales_navigation_drawer_open">Open navigation drawer</string>
    <string name="sales_navigation_drawer_close">Close navigation drawer</string>
    <string name="sales_action_settings">Settings</string>
    <string name="sales_title_activity_menu">MenuActivity</string>
    <string name="sales_place_holder">Place Order</string>
    <string name="sales_add_payment">Add Payment</string>
    <string name="sales_mark_as_partial">Mark as Partial</string>
    <string name="sales_remain_money">Remain money</string>
    <string name="sales_expected_change">Expected Change</string>
    <string name="sales_marked_as_ship">Mark as Shipped</string>
    <string name="sales_create_customer">Create Customer</string>
    <string name="sales_use_guest">Use Guest</string>
    <string name="sales_show_notifi_select_payment">Please select the payment method</string>
    <string name="sales_discount_currency">$</string>
    <string name="sales_custom_sales_product">Custom Product</string>
    <string name="sales_remove_discount">Remove Discount</string>
    <string name="sales_no_payment_method">No payment method is avaible</string>
    <string name="checkout_delete_order">Are you sure you want to delete this order?</string>
    <string name="checkout_pick_as_store">Need to ship?</string>
    <string name="checkout_discount_all">Discount - Maximum %1$s%%</string>
    <string name="checkout_custom_sale_name">Enter Product Name</string>
    <string name="checkout_custom_sale_ship">Shippable</string>
    <string name="checkout_address_item_default">default</string>
    <string name="checkout_success_message">Order has been successfully created</string>
    <string name="checkout_order_id">#%1s</string>
    <string name="checkout_delivery_date">Select Delivery Date</string>
    <string name="checkout_payment_cc_name">Name On Card</string>
    <string name="checkout_payment_cc_type">Credit Card Type</string>
    <string name="checkout_payment_cc_number">Credit Card Number</string>
    <string name="checkout_payment_cc_date">Expiration Date</string>
    <string name="checkout_payment_cc_cvv">CVV</string>
    <string name="checkout_add_items">Please add item(s) to cart!</string>
    <string name="checkout_send_email_success">An email has been sent for this order!</string>
    <string name="customer_search_customer_here">Search name, email, telephone</string>
    <string name="customer_title_customer_list">Customer</string>
    <string name="customer_title_customer_detail">Customer Detail</string>
    <string name="customer_title_information">Customer information"</string>
    <string name="customer_title_order_list">Order</string>
    <string name="customer_title_register_shifts">Register Shifts</string>
    <string name="customer_title_settings">Settings</string>
    <string name="customer_title_order_detail">Order Detail</string>
    <string name="customer_update_address">Update address</string>
    <string name="customer_delete_address">Delete address</string>
    <string name="customer_add_new">New Customer</string>
    <string name="customer_subscribe">Subscribe Newsletter</string>
    <string name="customer_billing_address">Billing Address</string>
    <string name="customer_shipping_address">Shipping Address</string>
    <string name="customer_same_billing_and_shipping_address">Billing Address and Shipping Address are the same</string>
    <string name="customer_add_shipping_address">Add Shipping Address</string>
    <string name="customer_add_billing_address">Add Billing Address</string>
    <string name="customer_edit_shipping_address">Edit Shipping Address</string>
    <string name="customer_edit_billing_address">Edit Billing Address</string>
    <string name="customer_add_new_success">The customer is saved successfully.</string>
    <string name="customer_add_new_address">Add Address</string>
    <string name="customer_phone_optional">Phone (Optional)</string>
    <string name="customer_company_optional">Company (Optional)</string>
    <string name="customer_street1_optional">Street1 (Optional)</string>
    <string name="customer_city_optional">City (Optional)</string>
    <string name="customer_zipcode_optional">Zip Code (Optional)</string>
    <string name="customer_street_optional">Street2 (Optional)</string>
    <string name="customer_state_or_province_optional">State or Province (Optional)</string>
    <string name="customer_vat_optional">VAT (Optional)</string>
    <string name="customer_default_address">Use Store Address</string>
    <string name="customer_create_success">The customer is saved successfully</string>
    <string name="order_search_order_here">Search orderID, name, email</string>
    <string name="order_detail_top_status">Status:</string>
    <string name="order_detail_top_create_at">Created Date:</string>
    <string name="order_detail_top_staff_name">Served by:</string>
    <string name="order_detail_top_total_due">Total Due:</string>
    <string name="order_detail_top_take_payment">Take Payment</string>
    <string name="order_detail_content_billing_address">BILLING ADDRESS</string>
    <string name="order_detail_content_shipping_address">SHIPPING ADDRESS</string>
    <string name="order_detail_content_shipping_delivery">Delivery Time:</string>
    <string name="order_detail_content_payment_paid">PAID</string>
    <string name="order_detail_content_payment_pay_later">PAY LATER</string>
    <string name="order_detail_content_comment_history">COMMENT HISTORY</string>
    <string name="order_detail_content_item_title_product">Product</string>
    <string name="order_detail_content_item_title_sku">Sku</string>
    <string name="order_detail_content_item_original_price">O.Price</string>
    <string name="order_detail_content_item_price">Price</string>
    <string name="order_detail_content_item_qty">Qty</string>
    <string name="order_detail_content_item_qty_to_ship">Qty to ship</string>
    <string name="order_detail_content_item_qty_to_refund">Qty to refund</string>
    <string name="order_detail_content_item_qty_to_invoice">Qty to Invoice</string>
    <string name="order_detail_content_item_return_stock">Return to stock</string>
    <string name="order_detail_content_item_subtotal">Subtotal</string>
    <string name="order_detail_content_item_tax_amount">Tax</string>
    <string name="order_detail_content_item_discount_amount">Discount</string>
    <string name="order_detail_content_item_row_total">Row Total</string>
    <string name="order_detail_content_item_row_qty_ordered">Ordered:</string>
    <string name="order_detail_content_item_row_qty_invoiced">Invoiced:</string>
    <string name="order_detail_content_item_row_qty_shipped">Shipped:</string>
    <string name="order_detail_content_item_row_qty_refunded">Refunded:</string>
    <string name="order_detail_bottom_tb_subtotal">Subtotal</string>
    <string name="order_detail_bottom_tb_shipping">Shipping</string>
    <string name="order_detail_bottom_tb_tax">Tax</string>
    <string name="order_detail_bottom_tb_discount">Discount</string>
    <string name="order_detail_bottom_tb_grand_total">Grand Total</string>
    <string name="order_detail_bottom_tb_total_paid">Total Paid</string>
    <string name="order_detail_bottom_tb_total_due">Total Due</string>
    <string name="order_detail_bottom_tb_total_refund">Total Refund Amount</string>
    <string name="order_detail_bottom_tb_total_change">Change</string>
    <string name="order_detail_bottom_btn_invoice">Invoice</string>
    <string name="order_menu_send_email">Send Email</string>
    <string name="order_menu_ship">Ship</string>
    <string name="order_menu_cancel">Cancel</string>
    <string name="order_menu_add_comment">Add comment</string>
    <string name="order_menu_re_order">Re-order</string>
    <string name="order_menu_refund">Refund</string>
    <string name="order_send_email_title">Send email</string>
    <string name="order_send_email_hint">Enter your email</string>
    <string name="order_send_email_success">An email has been sent for this order!</string>
    <string name="order_add_comment_title">Comment</string>
    <string name="order_add_comment_hint">Enter your comment</string>
    <string name="order_add_comment_success">Add order comment successfully!</string>
    <string name="order_shipment_title">Shipment</string>
    <string name="order_shipment_comment_title">Shipment Comment</string>
    <string name="order_shipment_track_number_title">Track number</string>
    <string name="order_shipment_send_email">Send email</string>
    <string name="order_shipment_btn_submit">SUBMIT SHIPMENT</string>
    <string name="order_shipment_success">The shipment has been created successfully.</string>
    <string name="order_refund_title">Refund</string>
    <string name="order_refund_btn_save">Offline Refund</string>
    <string name="order_adjust_refund_title">Adjust refund</string>
    <string name="order_refund_shipping_title">Refund Shipping</string>
    <string name="order_adjust_fee_title">Adjust fee</string>
    <string name="order_store_credit_title">Store Credit</string>
    <string name="order_gift_card_title">Refund to gift voucher code used</string>
    <string name="order_refund_comment_title">Refund Comment</string>
    <string name="order_refund_btn_submit">SUBMIT REFUND</string>
    <string name="order_refund_limit">The refundable amount is limited at %1$s</string>
    <string name="order_refund_success">A creditmemo has been created!</string>
    <string name="order_invoice_title">Invoice</string>
    <string name="order_invoice_comment_title">Invoice Comment</string>
    <string name="button_charge">Take Payment</string>
    <string name="payment_complete">Payment Successful</string>
    <string name="payment_fail">Payment Failed</string>
    <string name="refund_complete">Refund Successful</string>
    <string name="refund_failed">Failed to Refund.</string>
    <string name="refund_retry_msg">Retry</string>
    <string name="refund_button_text">Do Refund</string>
    <string name="payment_finish_msg">Done</string>
    <string name="payment_processing_msg">Processing Payment...</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="city">City</string>
    <string name="company">Company</string>
    <string name="country">Country</string>
    <string name="customer">Customer</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="logout">Logout</string>
    <string name="order_history">Orders History</string>
    <string name="phone">Phone</string>
    <string name="price">Price</string>
    <string name="sales">Sales</string>
    <string name="setting">Settings</string>
    <string name="state_or_province">State or Province</string>
    <string name="street">Street1</string>
    <string name="vat">VAT</string>
    <string name="zip_code">Zip Code</string>
</resources>