<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <!--   <item
               android:id="@+id/nav_dashboard"
               android:icon="@drawable/ic_dashboard"
               android:title="Dashboard" />-->
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app"
            android:title="@string/logout" />

        <item
            android:id="@+id/nav_sales"
            android:icon="@drawable/ic_shopping_cart_white"
            android:title="@string/sales" />
        <item
            android:id="@+id/nav_customers"
            android:icon="@drawable/ic_customer_white"
            android:title="@string/customer" />
        <item
            android:id="@+id/nav_orders_history"
            android:icon="@drawable/ic_history"
            android:title="@string/order_history" />
        <!--<item-->
        <!--android:id="@+id/nav_onhold_orders"-->
        <!--android:icon="@drawable/ic_hold"-->
        <!--android:title="OnHold Orders" />-->
        <!--<item-->
        <!--android:id="@+id/nav_register_shift"-->
        <!--android:icon="@drawable/ic_menu_manage"-->
        <!--android:title="Register Shift" />-->
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/setting" />
    </group>

    <!-- <item android:title="Supports">
         <menu>
             <item
                 android:id="@+id/nav_support"
                 android:icon="@drawable/ic_call_support"
                 android:title="Call support" />
             <item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_share"
                 android:title="Share" />
         </menu>
     </item>-->

</menu>
