<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/layout_margin_250"
    android:paddingRight="@dimen/layout_margin_250"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:id="@+id/id_charge_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_25"
            android:layout_marginTop="@dimen/layout_margin_20"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_processing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_18"
            android:layout_marginTop="@dimen/layout_margin_20"
            android:text="@string/payment_processing_msg"
            android:layout_below="@+id/txt_amount"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:focusable="true"
            android:inputType="numberDecimal"
            android:visibility="gone" />

        <Button
            android:id="@+id/charge_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/amount"
            android:onClick="onTakePaymentOptionSelected"
            android:text="@string/button_charge"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/id_payment_successful_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <TextView
            android:id="@+id/id_payment_success_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/payment_complete"
            android:textSize="18sp" />

        <Button
            android:id="@+id/id_refund_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_payment_success_textView"
            android:onClick="onRefundOptionSelected"
            android:text="@string/refund_button_text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_refund_payment"
            android:onClick="goBackToPaymentOptionsActivity"
            android:text="@string/payment_finish_msg" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/id_payment_failure_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <TextView
            android:id="@+id/id_payment_failure_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/payment_fail"
            android:textSize="18sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_payment_failure_textView"
            android:onClick="goBackToPaymentOptionsActivity"
            android:text="@string/payment_finish_msg" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/id_refund_successful_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <TextView
            android:id="@+id/id_refund_successful_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/refund_complete"
            android:textSize="18sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_refund_successful_textView"
            android:onClick="goBackToPaymentOptionsActivity"
            android:text="@string/payment_finish_msg" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/id_refund_failure_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <TextView
            android:id="@+id/id_refund_failure_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/refund_failed"
            android:textSize="18sp" />

        <Button
            android:id="@+id/id_refund_retry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_refund_failure_textView"
            android:onClick="onRefundOptionSelected"
            android:text="@string/refund_retry_msg" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_refund_retry"
            android:onClick="goBackToPaymentOptionsActivity"
            android:text="@string/payment_finish_msg" />

    </RelativeLayout>

</RelativeLayout>
